Fixes problem with UDP update. Bumps to version 1.6.4. issue #9.